progress(lab09): today's progress

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "sourceMap": true
   },
   "exclude": [
-    "mode_modules",
+    "node_modules",
     "typings/main.d.ts",
 	"typings/main",
 	"server"
