--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^3.3.6",
     "font-awesome": "^4.6.1",
     "jquery": "^2.2.3",
-    "lodash": "^4.11.1"
+    "lodash": "^4.11.1",
+    "socket.io": "^1.4.5"
   }
 }
