--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "gulp-concat": "^2.6.0",
     "gulp-sourcemaps": "^2.0.0-alpha",
     "gulp-typescript": "^2.13.0",
-    "gulp-uglify": "^1.5.3",
-    "gulp-watch": "^4.3.5"
+    "gulp-uglify": "^1.5.3"
   }
 }
